<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ButtonSample</string>
    <string name="title_properties">Property</string>
    <string name="title_define">Define (Must reboot)</string>
    <string name="title_keypad_mode">Keypad mode</string>
    <string name="label_properies">label</string>
    <string name="symbol_properies">symbol</string>
    <string name="save_properties">Change HOME</string>
    <string name="default_properties">Default</string>
    <string name="current_define">define</string>
    <string name="path_define">Specify path to KCM file</string>
    <string name="save_define">Change KCM</string>
    <string name="default_define">Default</string>
    <string name="toast_save_success">Complete to save</string>
    <string name="toast_no_change">No changes</string>
    <string name="toast_save_fail">Fail to save</string>
    
</resources>
