<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_properties"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label_properies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/label_properies" />

                <TextView
                    android:id="@+id/symbol_properies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/symbol_properies" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/save_properties"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/save_properties" />

                <Button
                    android:id="@+id/default_properties"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/default_properties" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                tools:ignore="UselessLeaf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_define"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/current_define"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_define" />

            <EditText
                android:id="@+id/path_define"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/path_define"
                android:singleLine="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/save_define"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/save_define" />

                <Button
                    android:id="@+id/default_define"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/default_define" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                tools:ignore="UselessLeaf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_keypad_mode"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10" />

            <Spinner
                android:id="@+id/keypad_mode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/keypad_mode_entries" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>